--- a/app/src/main/res/layout/fragment_alarm.xml
+++ b/app/src/main/res/layout/fragment_alarm.xml
@@ -14,16 +14,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/alarm_layout1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <Button
-                android:id="@+id/button5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="500dp"
-                android:text="Button"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_height="wrap_content"/>
     </ScrollView>
 
     <LinearLayout
@@ -34,21 +25,31 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:gravity="bottom">
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="50dp"
+        android:background="@android:color/transparent"
+        android:backgroundTint="@android:color/transparent"
+        android:backgroundTintMode="add"
+        android:gravity="bottom"
+        android:scrollbarThumbHorizontal="@android:color/transparent"
+        android:scrollbarThumbVertical="@android:color/transparent"
+        android:scrollbarTrackHorizontal="@android:color/transparent"
+        android:scrollbarTrackVertical="@android:color/transparent"
+        android:soundEffectsEnabled="false">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/pink_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="50dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginBottom="0dp"
             android:background="#ffffff"
-            android:elevation="50dp"
+            android:elevation="0dp"
             app:backgroundTint="#ffffff"
-            app:elevation="50dp"
+            app:borderWidth="0dp"
+            app:elevation="0dp"
+            app:rippleColor="#D8D8D8"
             app:srcCompat="@drawable/add" />
     </LinearLayout>
 
