--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -182,32 +182,23 @@
             app:layout_constraintStart_toStartOf="@+id/guideline38"
             app:layout_constraintTop_toBottomOf="@+id/img_dividor2" />
 
-        <TextView
-            android:id="@+id/txt_ringtone"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/btn_ringtone"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
+            android:background="@drawable/a_ripple_effect"
             android:fontFamily="@font/arial"
-            android:text="Alarm ringtone"
-            android:textAlignment="center"
+            android:text=""
+            android:textAlignment="textStart"
+            android:textAllCaps="false"
             android:textColor="#ffffff"
             android:textSize="8pt"
             android:textStyle="normal"
+            app:layout_constraintEnd_toStartOf="@+id/guideline39"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline38"
             app:layout_constraintTop_toBottomOf="@+id/txt_gen5" />
-
-        <TextView
-            android:id="@+id/txt_vol"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/arial"
-            android:text="Used when internet is not available"
-            android:textAlignment="center"
-            android:textColor="#ffffff"
-            android:textSize="5pt"
-            android:textStyle="normal"
-            app:layout_constraintStart_toStartOf="@+id/guideline38"
-            app:layout_constraintTop_toBottomOf="@+id/txt_ringtone" />
 
         <Button
             android:id="@+id/btn_privacy"
@@ -259,7 +250,7 @@
             android:textStyle="normal"
             app:layout_constraintEnd_toStartOf="@+id/guideline39"
             app:layout_constraintStart_toStartOf="@+id/guideline38"
-            app:layout_constraintTop_toBottomOf="@+id/txt_vol" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_ringtone" />
 
         <EditText
             android:id="@+id/editText_Name"
