--- a/app/src/main/res/drawable/a_ok_ripple.xml
+++ b/app/src/main/res/drawable/a_ok_ripple.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple
     xmlns:android = "http://schemas.android.com/apk/res/android"
-    android:color="#fbdbab">
-    <item android:drawable="@drawable/e_ok">
+    android:color="#fac8c8">
+    <item android:drawable="@drawable/a_ok">
     </item>
 </ripple>
