--- a/app/src/main/res/drawable/e_cancel_ripple.xml
+++ b/app/src/main/res/drawable/e_cancel_ripple.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple
     xmlns:android = "http://schemas.android.com/apk/res/android"
-    android:color="#D8D8D8">
+    android:color="#fbdbab">
     <item android:drawable="@drawable/e_cancel">
     </item>
 </ripple>
