--- a/app/src/main/res/drawable/m_ok_ripple.xml
+++ b/app/src/main/res/drawable/m_ok_ripple.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple
     xmlns:android = "http://schemas.android.com/apk/res/android"
-    android:color="#fbdbab">
-    <item android:drawable="@drawable/e_ok">
+    android:color="#f2e3e4">
+    <item android:drawable="@drawable/m_ok">
     </item>
 </ripple>
