--- a/app/src/main/res/layout/activity_popup.xml
+++ b/app/src/main/res/layout/activity_popup.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Minute"
+        android:text="@string/minute"
         android:textColor="@color/cardview_light_background"
         app:layout_constraintBottom_toTopOf="@+id/seekMinute"
         app:layout_constraintStart_toStartOf="parent" />
@@ -37,7 +37,7 @@
         android:layout_marginBottom="32dp"
         android:max="59"
         android:progress="0"
-        android:progressDrawable="@drawable/seek_bar"
+        android:progressDrawable="@drawable/e_seek_bar"
         android:thumb="@drawable/custom_thumb"
         app:layout_constraintBottom_toTopOf="@+id/btn_ok"
         app:layout_constraintEnd_toStartOf="@+id/txtMinuteVal"
@@ -53,7 +53,7 @@
         android:layout_marginBottom="8dp"
         android:max="23"
         android:progress="0"
-        android:progressDrawable="@drawable/seek_bar"
+        android:progressDrawable="@drawable/e_seek_bar"
         android:thumb="@drawable/custom_thumb"
         app:layout_constraintBottom_toTopOf="@+id/txtMinute"
         app:layout_constraintEnd_toStartOf="@+id/txtHourVal"
@@ -65,7 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="00"
+        android:text="@string/_00"
         android:textColor="@color/cardview_light_background"
         app:layout_constraintBottom_toTopOf="@+id/txtMinute"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -76,7 +76,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
-        android:text="00"
+        android:text="@string/_00"
         android:textColor="@color/cardview_light_background"
         app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -93,16 +93,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView2"
+    <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:text=""
+        android:textColor="@color/cardview_light_background"
+        android:textSize="10sp"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/e_button" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_ok"
