--- a/app/src/main/res/layout/activity_popup_snooze.xml
+++ b/app/src/main/res/layout/activity_popup_snooze.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Hour"
+        android:text="@string/interval_minutes"
         android:textColor="@color/cardview_light_background"
         app:layout_constraintBottom_toTopOf="@+id/seekHour"
         app:layout_constraintStart_toStartOf="parent" />
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/minute"
+        android:text="@string/times"
         android:textColor="@color/cardview_light_background"
         app:layout_constraintBottom_toTopOf="@+id/seekMinute"
         app:layout_constraintStart_toStartOf="parent" />
@@ -35,7 +35,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
-        android:max="59"
+        android:max="10"
         android:progress="0"
         android:progressDrawable="@drawable/e_seek_bar"
         android:thumb="@drawable/custom_thumb"
@@ -51,7 +51,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:max="23"
+        android:max="30"
         android:progress="0"
         android:progressDrawable="@drawable/e_seek_bar"
         android:thumb="@drawable/custom_thumb"
@@ -86,7 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="@string/alarm_time"
+        android:text="@string/snooze"
         android:textColor="@color/cardview_light_background"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/txtHour"
@@ -111,8 +111,8 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/e_ok_ripple"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/guideline40"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline40" />
 
     <Button
         android:id="@+id/btn_cancel"
@@ -121,8 +121,8 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/e_cancel_ripple"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline40" />
+        app:layout_constraintEnd_toStartOf="@+id/guideline40"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline40"
