--- a/app/src/main/res/layout/fragment_alarm.xml
+++ b/app/src/main/res/layout/fragment_alarm.xml
@@ -38,7 +38,7 @@
         android:soundEffectsEnabled="false">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/pink_icon"
+            android:id="@+id/btn_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
